--- a/campus-membership/package.json
+++ b/campus-membership/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build"
@@ -16,10 +16,12 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/html2canvas": "^1.0.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "lucide-vue-next": "^0.539.0",
     "primevue": "^4.3.7",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
